// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-jnlKLf bIFLzo"
>
  <div
    className="sc-fYxtnH dWawWO"
    color="#38A9DB"
  />
  <span
    className="sc-tilXH hVgrQB"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with dashed prop 1`] = `
<div
  className="sc-jnlKLf bIFLzo"
>
  <div
    className="sc-fYxtnH cyzOaU"
    color="#38A9DB"
  />
  <span
    className="sc-tilXH hVgrQB"
  >
    Chart Legend
  </span>
</div>
`;
